# Veritas-WIP

./: .pre-commit-config.yaml  .pylintrc  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: cicd.yaml
app/: something.py
app/models/: base.py  gad7.py  phq9.py
app/utils/prompts/: system_prompt.py
docs/: index.md  mkdocs.yml
search/: search_index.json
tests/: test_gad7_assessment.py  test_phq9_assessment.py  test_setup.py  test_system_prompts.py
