[project]
name = "veritas"
version = "0.1.0"
description = ""
authors = [
    {name = "Natan Schons",email = "natanschonsoficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-mermaid2-plugin (>=1.2.3,<2.0.0)",
    "mkdocs-material (>=9.7.4,<10.0.0)",
    "mkdocstrings[python] (>=1.0.3,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "poetry-plugin-export (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest --cov=app --cov-report=term-missing"
test-html = "pytest --cov=app --cov-report=html"
run = """
python app/main.py
"""
doc = "mkdocs serve"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)"
]
